# Google_Stock_Trend_Track

./: .buildinfo  README.html  README.md  environment.yml  genindex.html  objects.inv  search.html  searchindex.js  setup.cfg
.github/workflows/: gh-pages.yml
_sources/notebooks/: pytrend_viz.ipynb
docs/: _config.yml  _toc.yml
notebooks/: pytrend_viz.html  pytrend_viz.ipynb  world-bank-api.html  world-bank-package.html
src/stock_api_call/: stocks.py
