[metadata]
name = stocks
author = Holly Krambeck
author_email = hkrambeck@worldbank.org
maintainer = Holly Krambeck
maintainer_email = hkrambdeck@worldbank.org
version = 0.1.0
description = An Python wrapper for Polygon.io
long_description = file: README.md, LICENSE
keywords = python wrapper
license = World Bank Master Community License Agreement
classifiers =
    Programming Language :: Python :: 3
    License :: World Bank Master Community License Agreement
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests>=2.28.1
    pandas>=1.4.3

[options.packages.find]
where=src